# 2023_1_DDT

./: .clang-format  .dockerignore  .env  .gitignore  CMakeLists.txt  CPPLINT.cfg  Dockerfile  Makefile  README.md  conanfile.txt  docker-compose.yml  log.txt  run_format.sh  run_linters.sh
client/: CMakeLists.txt
client/internal/: CMakeLists.txt
client/internal/core/: CMakeLists.txt
client/internal/core/include/: Core.h
client/internal/core/src/: Core.cpp
client/internal/entities/: CMakeLists.txt
client/internal/entities/include/: Metric.h  Solution.h  Task.h  User.h
client/internal/entities/src/: Solution.cpp  Task.cpp  User.cpp
client/internal/gui/: CMakeLists.txt  main.cpp
client/internal/gui/include/: AddTaskDialog.h  AuthDialog.h  EntryWindow.h  SignUpDialog.h  SolutionsWindow.h  StatsDialog.h  TasksWindow.h  UIManager.h  UserWindow.h
client/internal/gui/src/: AddTaskDialog.cpp  AuthDialog.cpp  EntryWindow.cpp  SignUpDialog.cpp  SolutionsWindow.cpp  TasksWindow.cpp  UIManager.cpp  UserWindow.cpp
client/internal/gui/tests/: CMakeLists.txt  main.cpp
client/internal/httpClient/: CMakeLists.txt
client/internal/httpClient/include/: ClientTypes.h  HttpClient.h  HttpClientManager.h  Serializer.h
client/internal/httpClient/src/: HttpClient.cpp  HttpClientManager.cpp  Serializer.cpp
client/internal/httpClient/tests/: CMakeLists.txt  HttpClientManagerSuite.cpp  HttpClientSuite.cpp  main.cpp
client/internal/httpClient/virtual/: IHttpClient.h
metrics/: CMakeLists.txt  tbm_main.cpp
metrics/metrics_headers/: TextMetricsLib.h
metrics/source/: TextMetricImpl.cpp
metrics/testProgs/: code2.txt
metrics/tests/src/: text_metrics_tests.cpp  token_metrics_tests.cpp
metrics/tests/src/test-codes/: code1.txt
server/: CMakeLists.txt  config.sh
server/cmd/: .env  CMakeLists.txt  main.cpp
server/internal/: CMakeLists.txt
server/internal/dbManager/: CMakeLists.txt
server/internal/dbManager/include/: dbConnection.hpp  dbManager.hpp
server/internal/dbManager/src/: dbConnection.cpp  dbManager.cpp
server/internal/entities/: CMakeLists.txt
server/internal/entities/include/: MetricStat.hpp  Solution.hpp  Task.hpp  User.hpp
server/internal/entities/src/: MetricStat.cpp  Solution.cpp  Task.cpp  User.cpp
server/internal/httpServer/: CMakeLists.txt  main.cpp
server/internal/httpServer/include/: Header.h  HttpConnection.h  HttpServer.h  Parser.h  Request.h  Response.h  Router.h  Serializer.h  SolutionManager.h  TaskManager.h  TmpSolutionService.h  TmpTaskService.h  TmpUserService.h  UserManager.h  Utils.h
server/internal/httpServer/src/: HttpConnection.cpp  HttpServer.cpp  Parser.cpp  Response.cpp  Router.cpp  Serializer.cpp  SolutionManager.cpp  TaskManager.cpp  UserManager.cpp  Utils.cpp
server/internal/httpServer/tests/: CMakeLists.txt  RouterSuite.cpp  SolutionManagerSuite.cpp  TaskManagerSuite.cpp  UserManagerSuite.cpp  main.cpp
server/internal/httpServer/virtual/: ISolutionManager.h  ITaskManager.h  IUserManager.h
server/internal/metrics/: CMakeLists.txt
server/internal/metrics/include/: DiffLib.h  TextMetricsLib.h  TokenMetricLib.h
server/internal/metrics/src/: DiffLibImpl.cpp  TextMetricImpl.cpp  TokenMetricImpl.cpp
server/internal/metrics/testProgs/cpp/: code1.txt  code2.txt  code3.txt  code4.txt
server/internal/metrics/testProgs/output/: out1.txt  out2.txt  test1.html  test2.html
server/internal/metrics/testProgs/python/: pycode1.txt  pycode2.txt  pycode3.txt  pycode4.txt
server/internal/metrics/tests/: CMakeLists.txt
server/internal/metrics/tests/src/: diff_tests.cpp  main.cpp  text_metrics_tests.cpp  token_metrics_tests.cpp
server/internal/repository/: CMakeLists.txt
server/internal/repository/include/: MetricRepository.hpp  SolutionRepository.hpp  TaskRepository.hpp  UserRepository.hpp
server/internal/repository/src/: MetricRepository.cpp  SolutionRepository.cpp  TaskRepository.cpp  UserRepository.cpp
server/internal/repository/tests/: CMakeLists.txt  RepositoryTests.cpp
server/internal/repository/virtual/: IMetricRepository.hpp  ISolutionRepository.hpp  ITaskRepository.hpp  IUserRepository.hpp
server/internal/service/: CMakeLists.txt
server/internal/service/include/: Exceptions.h  Exeptions.h  FileMethods.h  ServiceExceptions.h  ServiceUtils.h  SolutionService.h  TaskService.h  TokenMetricLib.h  UserService.h  UserValidator.h  Utils.h
server/internal/service/src/: FileMethods.cpp  ServiceUtils.cpp  SolutionService.cpp  TaskService.cpp  UserService.cpp  UserValidator.cpp  Utils.cpp
server/internal/service/tests/: CMakeLists.txt  Service_test.cpp  SolutionServiceTest.cpp  TaskServiceTest.cpp  UserServiceTest.cpp  UserService_test.cpp  UserValidatorTest.cpp  main.cpp  task1.cpp
server/internal/service/virtual/: IMockMetrics.h  ISolutionService.h  ITaskService.h  IUserService.h
server/internal/solutions/: CMakeLists.txt
server/internal/solutions/include/: SolutionRepository.hpp
server/internal/solutions/src/: Solution.cpp  SolutionRepository.cpp
server/internal/solutions/virtual/: ISolutionRepository.hpp
server/internal/src/: CMakeLists.txt
server/internal/src/db/: CMakeLists.txt  config.json
server/internal/src/db/include/: conn.hpp
server/internal/src/db/src/: conn.cpp
server/internal/tasks/: CMakeLists.txt  Task.hpp
server/internal/tasks/include/: TaskRepository.hpp
server/internal/tasks/src/: Task.cpp  TaskRepository.cpp
server/internal/tasks/virtual/: ITaskRepository.hpp
server/internal/users/: CMakeLists.txt  User.hpp
server/internal/users/include/: UserRepository.hpp
server/internal/users/src/: User.cpp  UserRepository.cpp
server/internal/users/virtual/: IUserRepository.hpp
server/pkg/: CMakeLists.txt
server/pkg/antlr/: CMakeLists.txt
server/pkg/antlr/cpp14/: CMakeLists.txt
server/pkg/antlr/cpp14/include/: CPP14Lexer.h  CPP14Parser.h  MyCppAntlr.h
server/pkg/antlr/cpp14/src/: CPP14Lexer.cpp  CPP14Parser.cpp  MyCppAntlr.cpp
server/pkg/antlr/python3/: CMakeLists.txt
server/pkg/antlr/virtual/: IAntlrWrapper.h
server/text-basic-metrics/: tbm_main.cpp
(+23 files in other folders)
