set(CMAKE_CXX_STANDARD 20)
cmake_minimum_required(VERSION 3.19)
set(CMAKE_PREFIX_PATH build)
project(SourcedOut CXX)
find_package(antlr4-runtime REQUIRED)
find_package(Boost 1.8.1 REQUIRED)
find_package(libpqxx REQUIRED)
find_package(GTest REQUIRED)
find_package(nlohmann_json REQUIRED)
message(STATUS ${nlohmann_json_LIBRARIES})
add_executable(${PROJECT_NAME} src/main.cpp include/entity/User.hpp include/repository/UserRepository.hpp include/dataBase/conn.hpp include/repository/IUserRepository.hpp include/entity/Solution.hpp include/entity/Task.hpp include/repository/ISolutionRepository.hpp include/repository/ISolutionRepository.hpp include/repository/ITaskRepository.hpp include/repository/ITaskRepository.hpp)
#add_executable(${PROJECT_NAME} text-basic-metrics/tbm_main.cpp text-basic-metrics/tbm_main.cpp) строка для запуска моей части в text-basic-metrics
target_link_libraries(${PROJECT_NAME} ${Boost_LIBRARIES} ${antlr4-runtime_LIBRARIES} ${libpqxx_LIBRARIES} ${GTest_LIBRARIES} nlohmann_json::nlohmann_json)