set(CMAKE_CXX_STANDARD 17)
cmake_minimum_required(VERSION 3.16)
set(CMAKE_PREFIX_PATH build)
project(SourcedOut CXX)
# find_package(antlr4-runtime REQUIRED)
find_package(Boost 1.8.1 REQUIRED)
# find_package(libpqxx REQUIRED)
find_package(GTest REQUIRED)
set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)
message(STATUS ${Boost_LIBRARIES})
set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-lpthread -pthread")

add_subdirectory(metrics)

add_executable(${PROJECT_NAME} src/main.cpp)
target_link_libraries(${PROJECT_NAME} ${Boost_LIBRARIES} ${antlr4-runtime_LIBRARIES} ${libpqxx_LIBRARIES} ${GTest_LIBRARIES} MetricsLib)