project("HttpServerLib")

set(CMAKE_CXX_STANDARD 20)

file(GLOB SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
file(GLOB INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/include ${CMAKE_CURRENT_SOURCE_DIR}/virtual)

include_directories(${INCLUDE_DIRS})
add_library(${PROJECT_NAME} ${SOURCES})

target_include_directories(${PROJECT_NAME} PUBLIC ${INCLUDE_DIRS} ${Boost_INCLUDE_DIR} ${libEntities_INCLUDE_DIRS} ${SERVICE_lib_INCLUDE_DIRS})
target_link_libraries(${PROJECT_NAME} ${Boost_LIBRARIES} ${SERVICE_lib_LIBRARY} ${libEntities_LIB} ${PQXX_LIB})

set(HTTPSERVER_LIB ${PROJECT_NAME})
set(HTTPSERVER_LIB ${HTTPSERVER_LIB} PARENT_SCOPE)

set(HTTPSERVER_INCLUDE_DIRS ${INCLUDE_DIRS})
set(HTTPSERVER_INCLUDE_DIRS ${HTTPSERVER_INCLUDE_DIRS} PARENT_SCOPE)

# enable_testing()
# add_subdirectory(tests)