list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)

set(CMAKE_CXX_STANDARD 20)


# set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-lpthread")
set(THREADS_PREFER_PTHREAD_FLAG ON)


include(ExternalAntlr4Cpp)
include_directories(${ANTLR4_INCLUDE_DIRS})


set(ANTLR_EXECUTABLE /usr/local/lib/antlr-4.12.0-complete.jar)
find_package(ANTLR REQUIRED)

add_subdirectory(cpp14)
add_subdirectory(python3)

message("CPP_ANTLR_LIBRARY=${CPP_ANTLR_LIBRARY}")
message("PYTHON3_ANTLR_LIBRARY=${PYTHON3_ANTLR_LIBRARY}")

set(ANTLR4_LIB ${CPP_ANTLR_LIBRARY} ${PYTHON3_ANTLR_LIBRARY})
set(ANTLR4_LIB ${ANTLR4_LIB} PARENT_SCOPE)
set(ANTLR4_LIB_INCLUDE_DIRS ${CPP_ANTLR_INCLUDE_DIRS} ${PYTHON3_ANTLR_INCLUDE_DIRS})
set(ANTLR4_LIB_INCLUDE_DIRS ${ANTLR4_LIB_INCLUDE_DIRS} PARENT_SCOPE)

